# gSOAP

./: Makefile  Makefile.am  Makefile.in  NOTES.txt  README.txt  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  gsoap++.pc.in  gsoap.pc.in  gsoapck++.pc.in  gsoapck.pc.in  gsoapssl++.pc  gsoapssl.pc  makes.tar
autom4te.cache/: output.0  requests  traces.0  traces.1
gsoap/: Makefile.in
gsoap/samples/: Makefile.in
gsoap/src/: Makefile.in
gsoap/wsdl/: Makefile.in
soapcpp2/: COPYING.txt  INSTALL.txt  Makefile  Makefile.am  Makefile.in  README.txt  changelog.html  dom++.cpp  dom++.h  dom.c  dom.cpp  dom.h  dom.html  soapdoc2.html  stdsoap2.c  stdsoap2.cpp  stdsoap2.h  stl.h  stldeque.h  stllist.h  stlset.h  stlwstring.h
soapcpp2/WS/: Makefile  README.txt  WS-Addressing.h  WS-Header.h  WS-Routing.h
soapcpp2/custom/: struct_tm.c
soapcpp2/doc/: soapdoc2.html
soapcpp2/extras/: GSoapWinInet.cpp  GSoapWinInet.h  README.txt  ckdbtest.h  gsoapWinInet.cpp  gsoapWinInet.h  httpget.h  logging.cpp  logging.h  soapdefs.h  string.cpp  stringtest.cpp  stringtest.h
soapcpp2/gsoap-palm/: palmsoap1.c  palmsoap1.cpp  palmsoap2.c  palmsoap2.cpp  stdsoap2.c  stdsoap2.cpp  stdsoap2.h
soapcpp2/gsoap-symbian/: README.txt  soapC.cpp  soapClient.cpp  soapH.h  soapStub.h  soapinterop2CProxy.h  soapinterop2Proxy.h
soapcpp2/import/: README.txt  wsa.h  wsa3.h  wsse.h  wsu.h
soapcpp2/mod_gsoap/: README.txt
soapcpp2/samples/mybubble/: Makefile.am  Makefile.in  mybubble.h
soapcpp2/samples/uddi/: Makefile.am  Makefile.in  uddi.h
soapcpp2/wsdl/: Makefile  Makefile.am  Makefile.in  README.txt  gwsdl.h  http.h  imports.h  includes.h  mime.h  schema.cpp  schema.h  service.cpp  service.h  soap.cpp  soap.h  types.cpp  types.h  wsdl.cpp  wsdl.h  wsdl2h.cpp
(+491 files in other folders)
